sample-web-server/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-1-deployment
  labels:
    app: web-server-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server-1
  template:
    metadata:
      labels:
        app: web-server-1
    spec:
      containers:
      - name: web-server-1
        image: httpd:2.4
        ports:
        - containerPort: 80
