sample-web-server/httpd-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: web-server-1-service
spec: 
  selector: 
    app: web-server-1
  ports: 
    - protocol: TCP
      port: 8082
      targetPort: 80
