sample-web-server/httpd-ingress-updates.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server-1-service
            port:
              number: 8082
